--- a/.github/workflows/muuktestv1.yml
+++ b/.github/workflows/muuktestv1.yml
@@ -28,7 +28,7 @@ jobs:
             fi
             cd executor/
             git checkout videoEnabled
-            printf ${{ vars.MUUKTEST_KEY }} > key.pub
+            printf ${{ secrets.MUUKTEST_KEY }} > key.pub
             cat key.pub
             chmod 755 gradlew
             chmod 755 key.pub
